# starscope

./: .gitignore  Justfile  Phase 1.md  Readme.md  Search.md  index.html  pyproject.toml
.github/workflows/: run-ci.yml
assets/: duckdb-browser-BcZceI6U.js  duckdb-browser-eh.worker-DATV6sWu.js  duckdb-eh-BDDCKswc.js  index-BZoywtpV.js  index-SW-9XORL.css  transformers-BBCulQnJ.js
scripts/: Readme.md  build_db.py  collect.py  embed.py  preprocess.py  run_ci.py  search.py  search_db.py  settings.template.py
ui/: Readme.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.vue  style.css
ui/src/components/: EmptyState.vue  ErrorState.vue  RepoCard.vue  ResultsList.vue  SearchBar.vue
ui/src/composables/: useDuckDB.ts  useEmbedder.ts  useSearch.ts
