[project]
name = "starscope"
version = "0.1.0"
description = "Semantic search over GitHub stars: CI-built DuckDB + in-browser ranking."
readme = "Readme.md"
requires-python = ">=3.10"

dependencies = [
  "duckdb>=1.0.0",
  # "polars>=1.0.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  # "pydantic>=2.6.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "markdown-it-py>=3.0.0",
  "tiktoken>=0.7.0",
  "sentence-transformers>=2.6.0",
  "scikit-learn>=1.4.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "httpx>=0.27.0",
  "faiss-cpu>=1.12.0",
]
